integration of new design...

--- a/dashboard-html/index.html
+++ b/dashboard-html/index.html
@@ -106,18 +106,18 @@
                                             <li class="list-group-item justify-content-between bg-black text-white" style="font-size: 18px;">
                                                 Dapibus ac facilisis in
                                                 <i class="fa fa-ban"></i></li>
-                                            <li class="list-group-item justify-content-between bg-faded" style="font-size: 18px;">
+                                            <li class="list-group-item justify-content-between bg-faded text-muted" style="font-size: 18px;">
                                                 Dapibus ac facilisis in
-                                                <i class="fa fa-folder text-muted"></i></li>
+                                                <i class="fa fa-folder"></i></li>
                                         </ul>
                                         <div class="card-footer bg-primary card-inverse text-center p-1">
                                             <small>Last Built on 7:59pm, Aug 3, 2017</small>
                                         </div>
                                     </div>
                                     <div class="card border-0 mb-2 translate-x">
-                                        <h4 class="card-header bg-primary card-inverse">
+                                        <h4 class="card-header bg-danger card-inverse">
                                             <i class="fa fa-folder-open"></i> L1emu
-                                            <i class="fa fa-check pull-right"></i>
+                                            <i class="fa fa-times pull-right"></i>
                                         </h4>
                                         <div class="card-block bg-faded p-3" style="flex: 0 auto;">
                                             <h5 class="text-center">Build#36 - x86_64.debian.BUILD</h5>
@@ -143,7 +143,7 @@
                                                 Dapibus ac facilisis in
                                                 <i class="fa fa-ban"></i></li>
                                         </ul>
-                                        <div class="card-footer bg-primary card-inverse text-center p-1">
+                                        <div class="card-footer bg-danger card-inverse text-center p-1">
                                             <small>Last Built on 7:59pm, Aug 3, 2017</small>
                                         </div>
                                     </div>
