--- a/dashboard-html/demo.html
+++ b/dashboard-html/demo.html
@@ -13,9 +13,9 @@
 
 <body>
     <h1>hello world</h1>
-    <div class="modal" style="display: block; background-color: rgba(0, 0, 0, 0.6);">
+    <div class="modal" style="display: block; ">
         <div class="modal-dialog text-center" style="top: 50%; transform: translateY(-50%);">
-            <i class="fa fa-5x fa-spin fa-spinner fa-pulse text-white"></i>
+            <i class="fa fa-5x fa-spin fa-spinner fa-pulse"></i>
         </div>
     </div>
 
