renamed add-branch.html to branches.html added new add-branch.html minor changes to index, login, registration.html

--- a/dashboard-html/index.html
+++ b/dashboard-html/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
-<body>
+<body style="background: #393939;">
     <div class="carousel slide h-100">
         <div class="carousel-inner h-100" role="listbox">
             <div class="carousel-item h-100 active">
