--- a/dashboard-html/branches.html
+++ b/dashboard-html/branches.html
@@ -12,29 +12,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-faded flex-row justify-content-between">
-        <a href="" class="navbar-brand">
-            <img id="logo" src="images/logo.png" height="30" alt="Nokia" class="d-inline-block align-top" />
-        </a>
-        <form class="form-inline">
-            <span class="navbar-text mr-2">
-                    Hello, Admin
-                </span>
-            <button class="btn btn-sm align-middle btn-outline-primary" type="button">Logout</button>
-        </form>
-    </nav>
-    <div class="alert alert-success alert-dismissible fade show m-2" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-        <strong>Welcome Admin!</strong> You have signed in successfully.
-    </div>
-
     <main class="container mt-4 p-4 bg-white rounded">
+        <div class="alert alert-warning" role="alert">
+            <form class="form-inline justify-content-between">
+                <h5 class="mb-0">Hello, Admin</h5>
+                <button class="btn btn-sm align-middle btn-outline-primary" type="button">Logout</button>
+            </form>
+        </div>
         <div class="d-flex justify-content-between">
             <h2>Branches</h2>
             <a href="/branches/new" class="align-self-center">
-                            <i class="fa fa-plus"></i> New Branch</a>
+                <i class="fa fa-plus"></i> New Branch</a>
         </div>
         <table class="table table-hover table-default table-responsive" id="branches">
             <thead>
