--- a/dashboard-html/login.html
+++ b/dashboard-html/login.html
@@ -12,12 +12,7 @@
 
 </head>
 
-<body style="background: url(images/desk-background.jpg) no-repeat center; background-size: cover;">
-    <nav class="navbar navbar-light bg-faded">
-        <a href="" class="navbar-brand">
-            <img id="logo" src="images/logo.png" height="30" alt="Nokia" class="d-inline-block align-top" />
-        </a>
-    </nav>
+<body>
     <main class="container-fluid mt-4">
         <div class="card m-auto" style="width: 20rem;">
             <div class="card-block">
