--- a/dashboard-html/index.html
+++ b/dashboard-html/index.html
@@ -17,15 +17,14 @@
             <div class="carousel-item h-100 active">
                 <div class="wrapper">
                     <aside id="health" class="card-inverse">
-                        <div style="max-height: 250px;">
+                        <div class="m-auto" style="max-height: 200px; max-width: 200px;">
                             <canvas id="doughnutChart1"></canvas>
                             <input type="hidden" id="success" value="60"></input>
                             <input type="hidden" id="fail" value="28"></input>
                             <input type="hidden" id="unstable" value="12"></input>
                         </div>
-                        <span class="d-block text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat
-                                        a ante.</span>
-                        <div class="h-100">
+                        <h6 class="text-center">Jobs with builds: 40</h6>
+                        <div class="h-100" style="overflow: auto;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item justify-content-between bg-transparent">
                                     L1emu
@@ -62,23 +61,68 @@
                                         <div class="progress-bar" style="width: 100%; height: 5px;"></div>
                                     </div>
                                 </li>
+                                <li class="list-group-item justify-content-between bg-transparent">
+                                    L1emu
+                                    <span>100%</span>
+                                    <div class="progress w-100">
+                                        <div class="progress-bar" style="width: 100%; height: 5px;"></div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item justify-content-between bg-transparent">
+                                    L1emu
+                                    <span>100%</span>
+                                    <div class="progress w-100">
+                                        <div class="progress-bar" style="width: 100%; height: 5px;"></div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item justify-content-between bg-transparent">
+                                    L1emu
+                                    <span>100%</span>
+                                    <div class="progress w-100">
+                                        <div class="progress-bar" style="width: 100%; height: 5px;"></div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item justify-content-between bg-transparent">
+                                    L1emu
+                                    <span>100%</span>
+                                    <div class="progress w-100">
+                                        <div class="progress-bar" style="width: 100%; height: 5px;"></div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="alert alert-danger text-center rounded-0 my-3" role="alert">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+                        </div>
+                        <div>
+                            <h5 class="ml-2">Commits:</h5>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item justify-content-between bg-transparent">
+                                    Today: <b class="text-white">30</b>
+                                </li>
+                                <li class="list-group-item justify-content-between bg-transparent">
+                                    This week: <b class="text-white">296</b>
+                                </li>
+                                <li class="list-group-item justify-content-between bg-transparent">
+                                    Total: <b class="text-white">500</b>
+                                </li>
                             </ul>
                         </div>
                     </aside>
-                    <nav id="main-nav" class="navbar navbar-inverse">
+                    <nav id="main-nav" class="navbar fixed-top navbar-inverse">
                         <button class="navbar-toggler navbar-toggler-left" type="button">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
                         <h1 class="mb-0 text-white text-center">[ Branch 1 ]</h1>
                     </nav>
-                    <main id="branch" class="container-fluid mt-2 mb-2">
-                        <div class="alert alert-warning" role="alert">
+                    <main id="branch" class="container-fluid h-100 d-flex flex-column" style="overflow: auto;">
+                        <div class="alert alert-warning" style="margin-top: 4em;">
                             <strong>Holy guacamole!</strong> You should check in on some of those fields below.
                         </div>
-                        <section class="row">
-                            <article id="builds" class="col-md-8 col-xl-10">
-                                <div class="card-deck flex-nowrap overflow-hidden">
-                                    <div class="card border-0 mb-2 translate-x">
+                        <section class="row" style="flex: 1 auto;">
+                            <article id="builds" class="col-md-8 col-xl-10 d-flex">
+                                <div class="card-deck flex-nowrap overflow-hidden w-100">
+                                    <div class="card border-0 translate-x">
                                         <h4 class="card-header bg-primary card-inverse">
                                             <i class="fa fa-folder-open"></i> L1emu
                                             <i class="fa fa-check pull-right"></i>
@@ -114,7 +158,7 @@
                                             <small>Last Built on 7:59pm, Aug 3, 2017</small>
                                         </div>
                                     </div>
-                                    <div class="card border-0 mb-2 translate-x">
+                                    <div class="card border-0 translate-x">
                                         <h4 class="card-header bg-danger card-inverse">
                                             <i class="fa fa-folder-open"></i> L1emu
                                             <i class="fa fa-times pull-right"></i>
@@ -149,13 +193,13 @@
                                     </div>
                                 </div>
                             </article>
-                            <article id="projects" class="col-md-4 col-xl-2">
-                                <ul class="list-group list-group-flush overflow-hidden">
+                            <article id="projects" class="col-md-4 col-xl-2 d-flex">
+                                <ul class="list-group list-group-flush w-100 overflow-hidden">
                                     <li class="list-group-item translate-y">
                                         <i class="fa fa-3x fa-check-circle text-green"></i>
                                         <div class="">
-                                            <h5 class="mb-0">Cras justo odio</h5>
-                                            <small>Donec id elit non mi porta.</small>
+                                            <h5 class="mb-0">Cras justo odio Cras justo odio</h5>
+                                            <small>Donec id elit non mi porta. elit non mi porta.</small>
                                         </div>
                                     </li>
                                     <li class="list-group-item translate-y">
@@ -174,6 +218,13 @@
                                     </li>
                                     <li class="list-group-item translate-y">
                                         <i class="fa fa-3x fa-spin fa-circle-o-notch text-primary"></i>
+                                        <div class="">
+                                            <h5 class="mb-0">Cras justo odio</h5>
+                                            <small>Donec id elit non mi porta.</small>
+                                        </div>
+                                    </li>
+                                    <li class="list-group-item translate-y">
+                                        <i class="fa fa-3x fa-ban text-blackgo"></i>
                                         <div class="">
                                             <h5 class="mb-0">Cras justo odio</h5>
                                             <small>Donec id elit non mi porta.</small>
